--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,13 @@
     min-height:400px;
 }
 
+.row-content-new {
+	margin:0px auto;
+    padding: 50px 0px 50px 0px;
+    min-height:10px;
+
+}
+
 .footer{
     background-color: #D1C4E9;
     margin:0px auto;
