--- a/css/styles.css
+++ b/css/styles.css
@@ -55,3 +55,10 @@ input.radio {
       width:15px;
       margin: 2px 0 0 2px;
     }
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
